<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="birdItem"
            type="com.onix.internship.entity.BirdInfo" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainContainer"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/birdName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/latin_name"
            android:textColor="?colorPrimary"
            app:layout_constraintEnd_toStartOf="@+id/birdRec"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="@id/birdNameText"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/playPauseButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@{birdItem.isPlaying ? @drawable/ic_pause : @drawable/ic_play}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/birdNameText"
            app:layout_constraintHorizontal_weight="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/birdNameText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@{@string/title(birdItem.gen, birdItem.sp, birdItem.ssp)}"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/bottomMaterialDivider"
            app:layout_constraintEnd_toStartOf="@+id/birdRecText"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/playPauseButton"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/birdRec"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/post_author"
            android:textColor="?colorPrimary"
            app:layout_constraintEnd_toStartOf="@+id/birdId"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/birdName"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/birdRecText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@{birdItem.rec}"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/bottomMaterialDivider"
            app:layout_constraintEnd_toStartOf="@+id/birdIdText"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/birdNameText"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/birdId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/catalog_number"
            android:textColor="?colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/birdRec"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/birdIdText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@{@string/id(birdItem.id)}"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/bottomMaterialDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/birdRecText"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/bottomMaterialDivider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:dividerColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>